[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pytest",
  "pytest-playwright",
  "pydantic",
  "msgspec",
  "slack-bolt>=1.18.0",
  "arxiv>=2.0.0",
  "tweepy>=4.14.0",
  "beautifulsoup4>=4.12.0",
  "anthropic>=0.8.0",
  "openai>=1.0.0",
  "requests>=2.31.0",
  "ipython>=9.4.0",
  "tqdm>=4.67.0",
  "argh>=0.31.3",
  "pygit2>=1.16.0",
  "fsspec[s3]>=2025.5.1",
  "s3fs>=2024.9.0",
  "universal-pathlib>=0.2.5",
  "cloudpickle>=3.1.0",
  "boto3[crt]>=1.35.36",
  "numpy>=1.26.0",
  "msgspec>=0.18.6",
  "orjson>=3.10.11",
  "debugpy>=1.8.9",
  "kubernetes>=33.1.0",
  "psutil>=6.1.0",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",
  "shortuuid>=1.0.13",
  "tenacity>=9.0.0",
  "loguru>=0.7.3",
  "statsig-python-core>=0.0.9",
  "sentry-sdk>=2.25.1",
  "array-record>=0.7.1",
  "py-spy>=0.4.0",
  "podman>=5.4.0.1",
  "nebius>=0.2.34",
  "pymongo",
  "ruff",
]
